sw/rtfexport_setup.mk
@@ -45,6 +45,7 @@ $(eval $(call gb_CppunitTest_use_externals,sw_rtfexport$(1),\
 $(eval $(call gb_CppunitTest_set_include,sw_rtfexport$(1),\
     -I$(SRCDIR)/sw/inc \
     -I$(SRCDIR)/sw/source/core/inc \
+    -I$(SRCDIR)/sw/source/uibase/inc \
     -I$(SRCDIR)/sw/qa/inc \
     $$(INCLUDE) \
 ))
